# mdns_cpp

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp  mdns_client.cpp  mdns_service.cpp  service_discovery.cpp
include/mdns_cpp/: mdns.hpp  mdns_service.hpp  service.hpp  service_discovery.hpp  types.hpp
src/: internal_utils.hpp  log.hpp  mdns.cpp  mdns_service.cpp  mdns_utils.hpp  service.cpp  service_discovery.cpp  types.cpp  types_utils.hpp  winsock_manager.hpp
